Fix build script

--- a/.github/workflows/Build_and_publish_package.yml
+++ b/.github/workflows/Build_and_publish_package.yml
@@ -18,7 +18,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
+        with:
+          fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
+    - name: Update Gitversioning
+      run:
+        dotnet tool install --tool-path . nbgv
+        .\nbgv cloud
     - name: Build & Deploy Package
       # Build project using powershell script
       run: |
